# Hashed-string-lookup

./: CMakeLists.txt  config.hpp.in  cxxver.cmake  database.cpp  database.hpp  error.cpp  error.hpp  hash.hpp  string_id.cpp  string_id.hpp
detail/: a.out  database.cpp  database.hpp  hash.hpp  test.cpp
example/: main.cpp
